--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Home Page -->
     <main id="home-page" class="page container">
-        <h1>Welcome to Pixshop</h1>
+        <h1>CauseWriter.ai Image Editor</h1>
         <p class="subtitle">Your AI-powered creative studio. Choose a tool to begin.</p>
         <div class="tool-selection">
             <div id="go-to-text-to-image" class="tool-card" role="button" tabindex="0">
